# explain-lint

./: .gitignore  LICENSE  README.md  README_ja.md  conftest.py  explain_lint.py  explain_lint_mcp.py  pyproject.toml
examples/: sample.md  sample.md.terms.md  sample.pdf.terms.md  sample_ja.md  sample_ja.md.terms.md
explain_lint/: __init__.py  __main__.py  cli.py  diff.py  extract.py  ledger.py  patterns.py
issues/: README.md
issues/done/: ISSUE-01-moved-resync.md  ISSUE-02-ledger-pipe.md  ISSUE-03-unicode-output.md  ISSUE-05-tests.md  ISSUE-06-package-split.md  ISSUE-10-ja-sample.md  ISSUE-13-review-skipped.md  ISSUE-15-fallback-morph-noise.md
issues/open/: ISSUE-04-extraction-config.md  ISSUE-07-preamble-robustness.md  ISSUE-08-pdf-index.md  ISSUE-09-ja-morphological.md  ISSUE-11-pdf-sample.md  ISSUE-12-scan-file-not-found.md  ISSUE-14-pdf-context-broken.md  ISSUE-16-mcp-index-tool.md  ISSUE-17-bracket-id-strip.md
tests/: test_bracket_id.py  test_cli.py  test_diff_lifecycle.py  test_extract.py  test_ledger_roundtrip.py  test_mcp.py  test_morph.py  test_pdf_index.py  test_preamble.py  test_sync.py
tools/: make_pdf_samples.py
